fixed dark mode for Home.js

--- a/client/src/Home.css
+++ b/client/src/Home.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap');
+
 .home-container {
     overflow: hidden;
 }
@@ -45,7 +47,8 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    font-family: Oxygen, sans-serif;
+    /* font-family: Oxygen, sans-serif; */
+    font-family: 'Poppins', sans-serif;
     font-size: 35px;
     text-shadow: 10px 5px 25px rgba(15, 15, 15, 0.5);
     color: #fff;
